# Foodbi.tadamiao.com

./: .env.example  LICENSE  README.md  package-lock.json  package.json
docs/: data-sources.md
foodbi-etl/: .env.example  .gitignore  README.md  pyproject.toml  rodar-carga.command
foodbi-etl/foodbi_etl/: cli.py  cnaes.py  config.py  coords.py  downloader.py  logging_setup.py  mysql_writer.py  parser.py  staging.py
foodbi-etl/foodbi_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
public/: app.js  index.html  robots.txt  sitemap.xml  styles.css
scripts/: run-daily-update.js  setup-db.js
src/: server.js
src/config/: cnaes.js  env.js
src/db/: pool.js
src/db/migrations/: 001_initial_schema.sql
src/db/seeds/: 001_seed_sources.sql
src/middleware/: errorHandler.js
src/routes/: api.js
src/services/: cityService.js  collectionService.js  establishmentService.js  etlService.js
src/services/sources/: baseSource.js  cnpjWsSource.js  index.js
src/utils/: retry.js
